# ai_site_generator

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  example.env  pyproject.toml
src/: main.py
src/apps/: sites_sub_app.py  users_sub_app.py
src/apps/sites/: app.py  generate_html_chunks.py
src/core/: config.py  deps.py  lifespan.py  logger.py  s3dep.py
src/frontend_api/: app.py
src/frontend_api/sites/: generate_html_chunks.py  generate_html_page.py  mocked_data.json  mocked_data.py  routes.py  schemas.py  upload_to_s3.py
src/frontend_api/users/: routes.py  schemas.py
src/tools/: generate_html_chunks.py
