[project]
name = "ai-site-generator"
version = "0.0.1"
description = "FastAPI project for generating web-sites"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiofiles>=24.1.0",
    "editorconfig-checker==3.2.1",
    "fastapi[standard]==0.115.12",
    "html-page-generator",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.10.1",
    "ruff==0.11.13",
]

[tool.uv.sources]
html-page-generator = { git = "https://github.com/devmanorg/html-page-generator.git" }
